name:                archiver
version:             0.5.1

license:             BSD3
license-file:        LICENSE
author:              Gwern
maintainer:          Gwern <gwern0@gmail.com>

category:            Documentation, Network
synopsis:            Archive supplied URLs in WebCite & Internet Archive
description:         archiver is a daemon which will process a specified text file,
                     each line of which is a URL, and will (randomly) one by one request that
                     the URLs be archived or spidered by <http://www.webcitation.org>,
                     <http://www.archive.org>, and <http://www.wikiwix.com> for future reference.
                     (One may optionally specify an arbitrary `sh` command like `wget` to download URLs locally.)
                     .
                     Because the interface is a simple text file, this can be combined
                     with other scripts; for example, a script using Sqlite to extract
                     visited URLs from Firefox, or a program extracting URLs from Pandoc
                     documents. (See <http://www.gwern.net/Archiving%20URLs>.)
                     .
                     For explanation of the derivation of the code in `Network.URL.Archiver`,
                     see <http://www.gwern.net/haskell/Wikipedia%20Archive%20Bot>.

build-type:          Simple
Cabal-Version:       >= 1.6
stability:           provisional
tested-with:         GHC==6.12.1

source-repository head
  type:     darcs
  location: http://community.haskell.org/~gwern/archiver/

Library
        exposed-modules:     Network.URL.Archiver
        build-Depends:       base>=4 && < 5, network, HTTP, curl
        ghc-options:         -Wall

Executable archiver
           main-is:       archiver.hs
           build-depends: base>=4 && < 5, containers, bytestring, random, process